--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,5 @@
 
 {deps,  [ {hex, ".*", {git, "git@github.com:tonyrog/hex.git"}},
 	  {gsms, ".*", {git, "git@github.com:tonyrog/gsms.git"}},
-	  {lager, ".*", {git, "git://github.com/Feuerlabs/lager.git",
-			 "1.0.0.fl.2"}}
+	  {lager, ".*", {git, "git://github.com/Feuerlabs/lager.git", "1.1"}}
 	]}.
