--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 %%
 {erl_opts, [debug_info]}.
 
-{deps,  [ {hex, ".*", {git, "git@github.com:tonyrog/hex.git"}},
-	  {gsms, ".*", {git, "git@github.com:tonyrog/gsms.git"}},
-	  {lager, ".*", {git, "git://github.com/Feuerlabs/lager.git"}}
+{deps,  [ {hex, ".*", {git, "https://github.com/tonyrog/hex.git"}},
+	  {gsms, ".*", {git, "https://github.com/tonyrog/gsms.git"}},
+	  {lager, ".*", {git, "https://github.com/Feuerlabs/lager.git"}}
 	]}.
