--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,9 @@
 %% -*- erlang -*-
 %% Config file for hex plugin hex_sms application.
 %%
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info, {parse_transform, lager_transform}]}.
 
 {deps,  [ {hex, ".*", {git, "https://github.com/tonyrog/hex.git"}},
 	  {gsms, ".*", {git, "https://github.com/tonyrog/gsms.git"}},
-	  {lager, ".*", {git, "https://github.com/Feuerlabs/lager.git"}}
+	  {lager, ".*", {git, "https://github.com/basho/lager.git"}}
 	]}.
