--- a/rebar.config
+++ b/rebar.config
@@ -5,5 +5,5 @@
 
 {deps,  [ {hex, ".*", {git, "https://github.com/tonyrog/hex.git"}},
 	  {gsms, ".*", {git, "https://github.com/tonyrog/gsms.git"}},
-	  {lager, ".*", {git, "https://github.com/basho/lager.git"}}
+	  {lager, ".*", {git, "https://github.com/tonyrog/lager.git"}}
 	]}.
